Actually fix padding on mobile because I did it incorrectly the first time

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1400,7 +1400,7 @@ img.forgot-password {
     z-index: 1000;
   }
   #mobile-wrapper {
-    padding: 30px 20px 0 20px;
+    padding: 80px 20px 0 20px;
   }
   #menu-toggle {
     display: inline-block;
